--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
 language: c
 sudo: required
 install: wget https://raw.githubusercontent.com/ocaml/ocaml-ci-scripts/master/.travis-opam.sh
-script: bash -ex .travis-opam.sh
+script:
+  - bash -ex .travis-opam.sh
+  - make
 env:
-  - OCAML_VERSION=4.00
-  - OCAML_VERSION=4.01
-  - OCAML_VERSION=4.02
-  - OCAML_VERSION=4.03
+#  - OCAML_VERSION=4.00
+#  - OCAML_VERSION=4.01
+#  - OCAML_VERSION=4.02
+#  - OCAML_VERSION=4.03
   - OCAML_VERSION=4.04
 os:
   - linux
-  - osx
+#  - osx
