--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: c
 sudo: required
-install: wget https://raw.githubusercontent.com/ocaml/ocaml-ci-scripts/master/.travis-opam.sh
+install: wget https://raw.githubusercontent.com/ocaml/ocaml-ci-scripts/master/.travis-ocaml.sh
 script:
-  - bash -ex .travis-opam.sh
+  - bash -ex .travis-ocaml.sh
   - make
 env:
 #  - OCAML_VERSION=4.00
