--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,11 @@ script:
   - bash -ex .travis-ocaml.sh
   - make
 env:
-#  - OCAML_VERSION=4.00
-#  - OCAML_VERSION=4.01
-#  - OCAML_VERSION=4.02
-#  - OCAML_VERSION=4.03
+  - OCAML_VERSION=4.00
+  - OCAML_VERSION=4.01
+  - OCAML_VERSION=4.02
+  - OCAML_VERSION=4.03
   - OCAML_VERSION=4.04
 os:
   - linux
-#  - osx
+  - osx
